--- a/finance_guiyang/src/css/index.css
+++ b/finance_guiyang/src/css/index.css
@@ -13,7 +13,8 @@ ul, li, ol {
   list-style-type: none; }
 
 img {
-  vertical-align: top; }
+  vertical-align: top;
+  border-style: none; }
 
 /* reset img vertical align */
 a, a:visited {
@@ -195,22 +196,28 @@ body {
 .dot.active {
   width: 29px;
   height: 29px;
-  background: url(../images/dot_active.png) no-repeat;
+  background: url(../images/dot_active.png);
+  background-repeat: no-repeat;
   background-size: cover; }
 
 .mod-dynic {
   float: right;
   width: 288px;
   padding: 100px 20px 0;
-  background: url(../images/column_title_01.png) top 24px right 0 no-repeat;
+  margin-top: 24px;
+  background: url(../images/column_title_01.png) no-repeat;
+  background-position: top right;
   font-size: 14px;
   line-height: 30px; }
 
 .mod-route {
   position: relative;
   margin-bottom: 35px;
-  height: 596px;
-  background: #fffae6 url(../images/map.png) center bottom 20px no-repeat;
+  padding-bottom: 20px;
+  height: 576px;
+  background: #fffae6 url(../images/map.png) no-repeat;
+  background-position: center bottom;
+  background-origin: content-box;
   border: 1px solid #ee1e0a; }
 
 .route-title {
@@ -429,16 +436,20 @@ body {
   margin-bottom: 35px;
   padding-top: 100px;
   height: 1696px;
-  background: #fff url(../images/column_title_04.png) top 20px left 0 no-repeat;
   border: 1px solid #ee1e0a; }
 
 .mod-riding-more {
   position: absolute;
   top: 20px;
-  right: 20px;
+  right: 0;
+  width: 100%;
   line-height: 30px;
-  font-size: 16px; }
+  font-size: 16px;
+  background: #fff url(../images/column_title_04.png) no-repeat;
+  background-size: cover; }
   .mod-riding-more a {
+    float: right;
+    padding-right: 20px;
     color: #fff; }
 
 .riding-title-row {
@@ -463,8 +474,7 @@ body {
   line-height: 30px;
   text-align: center;
   color: #fff;
-  background: #f39800;
-  border-radius: 50%; }
+  background: url(../images/bg_number.png) no-repeat; }
 
 .riding-title-addr {
   font-weight: bolder; }
@@ -502,7 +512,8 @@ body {
   font-size: 18px;
   text-align: center;
   color: #fff;
-  background: rgba(0, 0, 0, 0.5); }
+  background: rgba(0, 0, 0, 0.5);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7f000000,endColorstr=#7f000000); }
 
 .riding-block-1 {
   float: left;
@@ -683,10 +694,20 @@ body {
     overflow: hidden; }
 
 .mod-weibo {
+  position: relative;
   height: 877px;
-  border: 1px solid #ee1e0a;
   margin-bottom: 35px;
-  background: #fff url(../images/title_bg_weibo.png) top 20px left 0 no-repeat; }
+  padding: 90px 20px 20px 20px;
+  background: #fff;
+  border: 1px solid #ee1e0a; }
+
+.mod-weibo-title {
+  position: absolute;
+  height: 30px;
+  width: 100%;
+  top: 20px;
+  left: 0;
+  background: #fff url(../images/title_bg_weibo.png) no-repeat; }
 
 .mod-block-company {
   height: 209px;
