--- a/finance_guiyang/src/sass/index.scss
+++ b/finance_guiyang/src/sass/index.scss
@@ -7,7 +7,7 @@
  */
 
 * { padding: 0; margin: 0; }
-ul,li,ol { list-style-type: none;} img { vertical-align: top; }  /* reset img vertical align */
+ul,li,ol { list-style-type: none;} img { vertical-align: top; border-style:none; }  /* reset img vertical align */
 a,a:visited { color: #333; text-decoration: none;} a:hover { color: #d00005; text-decoration: none;}
 /*body { font:12px/1.5 Tahoma,Helvetica,Arial,"\5B8B\4F53","\5FAE\8F6F\96C5\9ED1",sans-serif; }*/
 body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
@@ -119,7 +119,8 @@ body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
 .dot.active {
 		width: 29px;
 		height: 29px;
-		background: url(../images/dot_active.png) no-repeat;
+		background: url(../images/dot_active.png);
+		background-repeat: no-repeat;
 		background-size: cover;
 	}
 
@@ -129,17 +130,22 @@ body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
 	float: right;
 	width: 288px;
 	padding: 100px 20px 0;
-	background: url(../images/column_title_01.png) top 24px right 0 no-repeat;
+	margin-top: 24px;
+	background: url(../images/column_title_01.png) no-repeat;
+	background-position: top right;
 	font-size: 14px;
 	line-height: 30px;
 }
 
-// 第二块
+// 行程路线
 .mod-route {
 	position: relative;
 	margin-bottom: 35px;
-	height: 596px;
-	background: #fffae6 url(../images/map.png) center bottom 20px no-repeat;
+	padding-bottom: 20px;
+	height: 576px;
+	background: #fffae6 url(../images/map.png) no-repeat;
+	background-position: center bottom;
+	background-origin: content-box;
 	border: 1px solid #ee1e0a;
 }
 
@@ -398,18 +404,22 @@ body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
 	margin-bottom: 35px;
 	padding-top: 100px;
 	height: 1696px;
-	background: #fff url(../images/column_title_04.png) top 20px left 0 no-repeat;
 	border: 1px solid #ee1e0a;
 }
 
 .mod-riding-more {
 	position: absolute;
 	top: 20px;
-	right: 20px;
+	right: 0;
+	width: 100%;
 	line-height: 30px;
 	font-size: 16px;
+	background: #fff url(../images/column_title_04.png) no-repeat;
+	background-size: cover;
 
 	a {
+		float: right;
+		padding-right: 20px;
 		color: #fff;
 	}
 }
@@ -441,8 +451,7 @@ body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
 	line-height: 30px;
 	text-align: center;
 	color: #fff;
-	background: #f39800;
-	border-radius: 50%;
+	background: url(../images/bg_number.png) no-repeat;
 }
 
 .riding-title-addr {
@@ -488,6 +497,7 @@ body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
 	color: #fff;
 
 	background: rgba(0,0,0,0.5);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7f000000,endColorstr=#7f000000);
 }
 
 .riding-block-1 {
@@ -755,10 +765,21 @@ body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
 
 // 第三块 微博
 .mod-weibo {
+	position: relative;
 	height: 877px;
-	border: 1px solid #ee1e0a;
 	margin-bottom: 35px;
-	background: #fff url(../images/title_bg_weibo.png) top 20px left 0 no-repeat;
+	padding: 90px 20px 20px 20px;
+	background: #fff;
+	border: 1px solid #ee1e0a;
+}
+
+.mod-weibo-title {
+	position: absolute;
+	height: 30px;
+	width: 100%;
+	top: 20px;
+	left: 0;
+	background: #fff url(../images/title_bg_weibo.png) no-repeat;
 }
 
 // 第四块 合作伙伴
