--- a/finance_guiyang/src/css/index.css
+++ b/finance_guiyang/src/css/index.css
@@ -213,11 +213,9 @@ body {
 .mod-route {
   position: relative;
   margin-bottom: 35px;
-  padding-bottom: 20px;
-  height: 576px;
+  height: 596px;
   background: #fffae6 url(../images/map.png) no-repeat;
   background-position: center bottom;
-  background-origin: content-box;
   border: 1px solid #ee1e0a; }
 
 .route-title {
@@ -289,7 +287,7 @@ body {
 
 .chishui {
   top: 140px;
-  left: 360px; }
+  left: 350px; }
 
 .chishui:hover::after {
   display: inline-block; }
@@ -307,7 +305,7 @@ body {
 
 .xishui {
   top: 180px;
-  left: 400px; }
+  left: 385px; }
 
 .xishui:hover::after {
   display: inline-block; }
@@ -325,7 +323,7 @@ body {
 
 .tongzi {
   top: 190px;
-  left: 520px; }
+  left: 505px; }
 
 .tongzi:hover::after {
   display: inline-block; }
@@ -343,7 +341,7 @@ body {
 
 .zunyi {
   top: 240px;
-  left: 450px; }
+  left: 435px; }
 
 .zunyi:hover::after {
   display: inline-block; }
@@ -361,7 +359,7 @@ body {
 
 .wengan {
   top: 325px;
-  left: 530px; }
+  left: 515px; }
 
 .wengan:hover::after {
   display: inline-block; }
@@ -379,7 +377,7 @@ body {
 
 .yuqing {
   top: 275px;
-  left: 610px; }
+  left: 595px; }
 
 .yuqing:hover::after {
   display: inline-block; }
@@ -397,7 +395,7 @@ body {
 
 .zhenyuan {
   top: 310px;
-  left: 655px; }
+  left: 640px; }
 
 .zhenyuan:hover::after {
   display: inline-block; }
@@ -415,7 +413,7 @@ body {
 
 .liping {
   top: 415px;
-  left: 690px; }
+  left: 680px; }
 
 .liping:hover::after {
   display: inline-block; }
@@ -485,7 +483,7 @@ body {
   border-bottom: 1px solid #e6e6e6;
   overflow: hidden; }
 
-.riding-block-row:last-child {
+.riding-block-row.last-block-row {
   border-bottom: none;
   border-bottom: 0; }
 
@@ -710,8 +708,9 @@ body {
   background: #fff url(../images/title_bg_weibo.png) no-repeat; }
 
 .mod-block-company {
+  position: relative;
   height: 209px;
-  background: #fff url(../images/title_bg_company.png) top 20px left 0 no-repeat;
+  background: #fff;
   border: 1px solid #ee1e0a; }
   .mod-block-company p {
     margin-top: 50px;
@@ -721,3 +720,10 @@ body {
   .mod-block-company a {
     display: inline-block;
     padding: 0 50px; }
+
+.mod-company-title {
+  position: absolute;
+  top: 20px;
+  width: 100%;
+  height: 30px;
+  background: url(../images/title_bg_company.png) no-repeat; }
