--- a/finance_xian/src/sass/index.scss
+++ b/finance_xian/src/sass/index.scss
@@ -135,6 +135,7 @@ body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
 	background-position: top right;
 	font-size: 14px;
 	line-height: 30px;
+	color: #717070;
 }
 
 // 报道
@@ -555,11 +556,12 @@ body { font:12px/1.5 Arial,"\5FAE\8F6F\96C5\9ED1",sans-serif; }
 	overflow: hidden;
 }
 
-.riding-block-link {
+a.riding-block-link {
 	position: relative;
 	float: left;
 	width: 100%;
 	padding-top: 15px;
+	color: #959595;
 }
 
 .riding-link-title {
