--- a/baicheng/src/css/details_cn.css
+++ b/baicheng/src/css/details_cn.css
@@ -132,7 +132,8 @@ body {
   overflow: hidden; }
   .container .main {
     width: 1000px;
-    margin: 0 auto; }
+    margin: 0 auto 30px;
+    overflow: hidden; }
 
 .block-intro {
   margin-bottom: 30px;
@@ -148,6 +149,8 @@ body {
     .mod-lb .focus-dots-content .dot {
       position: relative;
       display: inline-block;
+      *display: inline;
+      *zoom: 1;
       width: 140px;
       height: 74px;
       margin-top: 8px;
@@ -164,7 +167,9 @@ body {
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(255, 255, 255, 0.5); }
+      background: white;
+      background: rgba(255, 255, 255, 0.5);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7fffffff,endColorstr=#7fffffff); }
     .mod-lb .focus-dots-content .dot.active::after {
       background: transparent; }
 
@@ -190,11 +195,13 @@ body {
   .focus_thumbs .title {
     position: absolute;
     bottom: 0;
-    width: 590px;
+    padding: 0 15px;
+    width: 560px;
     line-height: 50px;
     font-size: 30px;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.4); }
+    background: black;
+    background: rgba(0, 0, 0, 0.4);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000,endColorstr=#66000000); }
 
 .focus_pagination .dot {
   position: relative;
@@ -214,7 +221,9 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.5); }
+  background: white;
+  background: rgba(255, 255, 255, 0.5);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7fffffff,endColorstr=#7fffffff); }
 
 .focus_pagination .dot.active::after {
   background: transparent; }
@@ -232,7 +241,9 @@ body {
     font-size: 16px;
     white-space: pre-wrap;
     line-height: 30px;
+    color: black;
     color: rgba(0, 0, 0, 0.63);
+    border-top: 1px solid black;
     border-top: 1px solid rgba(0, 0, 0, 0.4); }
   .mod-intro .intro-detail {
     float: right;
@@ -272,6 +283,7 @@ body {
   line-height: 30px;
   font-size: 18px;
   font-weight: bolder;
+  color: black;
   color: rgba(0, 0, 0, 0.87); }
 
 .dynamic-news-text {
