--- a/baicheng/src/sass/details_cn.scss
+++ b/baicheng/src/sass/details_cn.scss
@@ -48,8 +48,9 @@ body {
 	overflow: hidden;
 
 	.main { 
-		width: 1000px; 
-		margin: 0 auto;
+		width: 1000px;
+		margin: 0 auto 30px;
+		overflow: hidden;
 	}
 }
 
@@ -71,6 +72,8 @@ body {
 		.dot {
 			position: relative;
 			display: inline-block;
+			*display: inline;
+			*zoom: 1;
 			width: 140px;
 			height: 74px;
 			margin-top: 8px;
@@ -93,7 +96,9 @@ body {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background: rgba(255, 255, 255, 0.5);
+			background: rgb(255, 255, 255);
+			background: rgba(255, 255, 255, .5);
+			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7fffffff,endColorstr=#7fffffff);
 		}
 
 		.dot.active::after {
@@ -131,11 +136,13 @@ body {
 	.title {
 		position: absolute;
 		bottom: 0;
-		width: 590px;
+		padding: 0 15px;
+		width: 560px;
 		line-height: 50px;
 		font-size: 30px;
-		text-align: center;
+		background: rgb(0, 0, 0);
 		background: rgba(0, 0, 0, .4);
+		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#66000000,endColorstr=#66000000);
 	}
 }
 
@@ -160,7 +167,9 @@ body {
 		left: 0;
 		width: 100%;
 		height: 100%;
+		background: rgb(255, 255, 255);
 		background: rgba(255, 255, 255, 0.5);
+		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7fffffff,endColorstr=#7fffffff);		
 	}
 
 	.dot.active::after {
@@ -185,7 +194,9 @@ body {
 		font-size: 16px;
 		white-space: pre-wrap;
 		line-height: 30px;
+		color: rgb(0, 0, 0);
 		color: rgba(0, 0, 0, .63);
+		border-top: 1px solid rgb(0, 0, 0);
 		border-top: 1px solid rgba(0, 0, 0, .4);
 	}
 
@@ -235,6 +246,7 @@ body {
 	line-height: 30px;
 	font-size: 18px;
 	font-weight: bolder;
+	color: rgb(0, 0, 0);
 	color: rgba(0, 0, 0, .87);
 }
 
@@ -245,6 +257,7 @@ body {
 	height: 70px;
 	line-height: 24px;
 	font-size: 14px;
+	color: rgba(0, 0, 0);
 	color: rgba(0, 0, 0, .63);
 }
 
@@ -355,6 +368,7 @@ a.block-dynamic-more {
 	padding: 10px;
 	line-height: 30px;
 	font-size: 18px;
+	color: rgb(0, 0, 0);
 	color: rgba(0, 0, 0, .87);
 	border-bottom: 1px solid #f2f2f2;
 	background: #fff;
