--- a/m_huanqiu/src/sass/index.scss
+++ b/m_huanqiu/src/sass/index.scss
@@ -53,7 +53,7 @@ header {
 .header-user {
   float: right;
 
-  img {
+  svg {
     margin: 0 (.75rem/2);
     width: .5rem;
     height: .5rem;
@@ -244,7 +244,7 @@ nav {
   text-align: center;
   border-right: (3rem/64) solid #e3e3e3;
 
-  img {
+  svg {
     width: (80rem/64);
     height: (34rem/64);
     vertical-align: middle;
@@ -312,7 +312,7 @@ section {
   margin: 0 .15rem;
   color: #9b9b9b;
 
-  img {
+  svg {
     vertical-align: middle;
     width: .3125rem;
     height: .3125rem;
@@ -327,7 +327,7 @@ section {
     float: right;
     margin: 0 .15rem;
 
-    img {
+    svg {
       display: inline-block;
       padding: (3rem/64) (2.5rem/64) (3rem/64) (3.5rem/64);
       width: (23rem/64);
