--- a/m_huanqiu/src/sass/index.scss
+++ b/m_huanqiu/src/sass/index.scss
@@ -18,6 +18,7 @@ body {
   margin: 0 auto;
   width: 10rem;
   font-family: PingFangSC-Regular;
+  transition: overflow .5s linear .15s;
 }
 
 // 新闻标签
@@ -106,11 +107,11 @@ nav {
 }
 
 .nav-more {
-  // display: none;
   position: absolute;
   top: 2.5rem;
   bottom: 20rem;
   width: 10rem;
+  opacity: 0;
   background: #fff;
   z-index: 222;
   border-bottom: (4rem/64) solid #910910;
@@ -157,7 +158,6 @@ nav {
 .icon-transform {
   stroke-dasharray: 680;
   stroke-dashoffset: 0;
-  // transition: all 10s linear .1s;
 }
 
 .loading-text {
