--- a/m_huanqiu/src/sass/index.scss
+++ b/m_huanqiu/src/sass/index.scss
@@ -21,10 +21,21 @@ body {
   transition: overflow .5s linear .5s;
 }
 
-// 新闻标签
-span.news-label-lvxing {
-  color: #8a54ad;
-  border-color: #8a54ad;
+article,
+aside,
+footer,
+header,
+nav,
+section {
+  display: block;
+}
+
+img {
+  border-style: none;
+}
+
+body {
+  background-color: #f2f2f2;
 }
 
 // header
@@ -64,25 +75,51 @@ header {
 
 // nav
 nav {
+  position: relative;
+  box-sizing: border-box;
+  height: 1.25rem;
   font-size: 0;
   border-bottom: 2px solid #910910;
+  background: #fff;
   z-index: 111;
 }
 
+.nav-scroll {
+  height: calc(1.25rem - 2px);
+  overflow: hidden;
+}
+
 .nav-main {
+  position: relative;
   box-sizing: border-box;
-  height: (80rem/64);
+  width: 10rem - 1.25rem;
+  height: 1.5rem;
   line-height: (80rem/64);
   border-bottom: 1px solid #f5f5f5;
   background: #fff;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.nav-main-bar {
+  white-space: nowrap;
 }
 
 .nav-item {
   display: inline-block;
   width: 1.75rem;
-  font-size: (28rem/64);
+  height: 1.25rem;
+  font-size: .45rem;
   text-align: center;
-  color:#6d6d6d;
+  color: #6d6d6d;
+
+  a {
+    color: #6d6d6d;
+  }
+
+  &.small {
+    width: 3rem;
+  }
 }
 
 .nav-item.active {
@@ -91,12 +128,14 @@ nav {
 }
 
 .nav-more-btn {
-  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
   box-sizing: border-box;
   padding: (32rem/64) (23rem/64) (24rem/64);
-  width: (80rem/64);
-  height: (80rem/64);
-  background: url(../images/nav_more_btn.png) no-repeat;
+  height: calc(1.25rem - 2px);
+  width: 1.25rem;
+  background: #fff url(../images/nav_more_btn.png) no-repeat;
   background-size: contain;
   background-origin: content-box;
   border-left: 1px solid #f5f5f5;
@@ -108,8 +147,8 @@ nav {
 
 .nav-more {
   position: absolute;
-  top: 2.5rem;
-  // bottom: 20rem;
+  top: 1.25rem;
+  left: 0;
   box-sizing: border-box;
   width: 10rem;
   height: 0;
@@ -137,50 +176,40 @@ nav {
 }
 
 // 下拉刷新
-.drop-down {
-  position: absolute;
-  top: 2.5rem;
-  width: 10rem;
-  height: 1.5rem;
-  line-height: 1.5rem;
+.refresh-control {
+}
+
+.refresh-control-text {
+  margin-top: -1.2rem;
   font-size: .45rem;
-  text-align: center;
   color: #999;
+  text-align: center;
+
+  .loading-icon {
+    stroke: #000;
+    width: 1.2rem;
+    height: 1.2rem;
+    vertical-align: middle;
+  }
+
+  .transform-icon {
+    stroke-dasharray: 680;
+    stroke-dashoffset: 0;
+  }
 }
 
-.loading-icon {
-  // width: .5rem;
-  // height: .5rem;
-  stroke: #000;
-  width: 1.2rem;
-  height: 1.2rem;
-  vertical-align: middle;
-}
-
-.icon-transform {
-  stroke-dasharray: 680;
-  stroke-dashoffset: 0;
-}
-
-.loading-text {
-  vertical-align: middle;
-}
-
-// 新闻
-.news-list {
-  position: relative;
-  font-size: 0;
-  overflow: hidden;
+.refresh-control-container {
+  width: 10rem;
 }
 
 // 轮播
 .lunbo {
   position: relative;
   height: (360rem/64);
+  width: 10rem;
   overflow: hidden;
   
   ul {
-    width: 50rem;
     height: 100%;
   }
 
@@ -196,34 +225,43 @@ nav {
     height: 100%;
   }
 
-  .first-title {
+  .lunbo-title-bg {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: (120rem/64);
+    background-image: linear-gradient(-180deg, rgba(0,0,0,0.00) 27%, #000000 100%);
+  }
+
+  .lunbo-title {
     position: absolute;
     left: (24rem/64);
     bottom: (21rem/64);
-    height: (40rem/64);
-    font-size: (30rem/64);
+    width: 8.5rem;
+    font-size: .45rem;
     color: #fff;
     overflow: hidden;
   }
-}
 
-.swiper-pagination {
-  position: absolute;
-  right: (23rem/64);
-  bottom: (28rem/64);
-}
+  .focus-dots-content {
+    position: absolute;
+    right: (23rem/64);
+    bottom: .25rem;
+  }
 
-.swiper-pagination-bullet {
-  display: inline-block;
-  margin: (5rem/64);
-  width: (8rem/64);
-  height: (8rem/64);
-  background: #a7a7a7;
-  border-radius: 50%;
-}
+  .dot {
+    display: inline-block;
+    margin: (5rem/64);
+    width: 5px;
+    height: 5px;
+    background: #a7a7a7;
+    border-radius: 50%;
 
-.swiper-pagination-bullet-active {
-  background: #fff;
+    &.active {
+      background: #fff;
+    }
+  }
 }
 
 // live
@@ -233,7 +271,7 @@ nav {
   box-sizing: border-box;
   height: (90rem/64);
   border-bottom: 1px solid lighten(#e3e3e3, 5%);
-  background: #f5f5f5;
+  background: #fff;
 }
 
 .live-logo {
@@ -260,29 +298,174 @@ nav {
   line-height: (94rem/64);
   width: 10rem - (126rem/64);
   padding-left: (23rem/64);
-  font-size: (30rem/64);
+  font-size: .45rem;
   color: #464646;
   letter-spacing: 0px;
   text-align: left;
   overflow: hidden;
 }
 
-section {
-  margin: 0 (18rem/64);
-  padding: (22rem/64) 0;
-  border-bottom: 1px solid lighten(#e3e3e3, 5%);
-  overflow: hidden;
+// 推荐位
+// .recommend {
+//   margin-top: .3rem;
+//   background-color: #fff;
+//   border-bottom: 1px solid #e3e3e3;
+// }
 
-  &:last-child {
-    border-bottom: none;
+.news-block {
+  margin-top: .3rem;
+  background-color: #fff;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.block-header {
+  padding: 0 .3rem;
+  height: 1rem;
+  line-height: 1rem;
+  overflow: hidden;
+}
+
+.block-logo{
+  font-family: PingFangSC-Medium;
+  font-size: .45rem;
+  line-height: .4rem;
+
+  display: inline-block;
+
+  margin-left: -.3rem;
+  padding-left: .3rem;
+
+  text-align: left;
+  vertical-align: middle;
+  letter-spacing: 0;
+
+  color: #910910;
+  border-left: 3px solid #910910;
+}
+
+// .recommend-index {
+//   float: right;
+//   font-family: PingFangSC-Regular;
+//   vertical-align: bottom;
+//   font-size: .35rem;
+//   color: #9b9b9b;
+//   text-align: left;
+
+//   .recommend-index-curr {
+//     font-size: .43rem;
+//     color: #910910;
+//   }
+// }
+
+.list-indicator {
+  float: right;
+  font-family: PingFangSC-Regular;
+  vertical-align: bottom;
+  font-size: .35rem;
+  color: #9b9b9b;
+  text-align: left;
+
+  .list-indicator-curr {
+    font-size: .43rem;
+    color: #910910;
   }
 }
 
+.block-content {
+  padding: 1px 0 .6rem;
+  width: 10rem;
+
+  .focus-dots-content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 10rem;
+    text-align: center;
+  }
+
+  .dot {
+    display: inline-block;
+    margin: .1rem;
+    height: 6px;
+    width: 6px;
+    background-color: #ccc;
+    border-radius: 50%;
+
+    &.active {
+      background-color: #910910;
+    }
+  }
+}
+
+.news-style-0,
+.news-style-1,
+.news-style-2,
+.news-video,
+.first-topic {
+  padding: .3rem 0;
+  margin: 0 .3rem;
+  border-top: 1px solid #f0f0f0;
+  overflow: hidden;
+}
+
+// 兴趣推荐
+.interest {
+  margin-top: .3rem;
+  background: #fff;
+  border-top: 1px solid #e3e3e3;
+}
+
+// 微信热点
+.wechat-content {
+  box-sizing: border-box;
+  width: 10rem;
+  padding: 0 .3rem .3rem;;
+  // margin: .4rem 0;
+  background: #fff;
+  overflow: hidden;
+}
+
+.wechat-block {
+  position: relative;
+  box-sizing: border-box;
+  padding: .2rem;
+  margin-top: .1rem;  
+  float: left;
+  margin-left: .2rem;
+  width: 3rem;
+  height: 2.3rem;
+  background: #f2f2f2;
+
+  &:first-child {
+    margin-left: 0;
+    height: 4.7rem;
+
+    .wechat-title {
+      height: 3.2rem;
+    }
+  }
+}
+
+.wechat-title {
+  font-family: PingFangSC-Regular;
+  height: 1.2rem;
+  font-size: .4rem;
+  color: #464646;
+  overflow: hidden;
+}
+
+.wechat-small {
+  position: absolute;
+  left: .2rem;
+  bottom: .2rem;
+  font-family: PingFangSC-Regular;
+  font-size: .3rem;
+  color: #9b9b9b;
+}
+
 .news-title {
-  // height: (78rem/64);
-  // letter-spacing:0px;
   line-height: (39rem/64);
-  font-size: (30rem/64);
+  font-size: .47rem;
   color:#464646;
   overflow: hidden;
 }
@@ -359,12 +542,12 @@ section {
 .news-style-1 {
 
   .news-title {
-    min-height: .9375rem;
+    min-height: 1rem;
   }
 
   .news-content {
     float: left;
-    width: (422rem/64);
+    width: 6.6rem;
   }
 
   .news-imgs {
@@ -382,15 +565,16 @@ section {
 // 第三种风格， 多图
 .news-style-2 {
 
-  // .news-imgs {
-    // font-size: 0;
-  // }
+  .news-imgs {
+    font-size: 0;
+  }
 
   .news-pic {
     display: inline-block;
-    margin: (14rem/64) 0 (14rem/64) (11rem/64);
-    width: (194rem/64);
-    height: (145rem/64);
+    margin: .2rem 0;
+    margin-left: .2rem;
+    width: 3rem;
+    height: 2.2rem;
 
     &:first-child {
       margin-left: 0;
@@ -412,104 +596,115 @@ section {
 
 // 第一话题
 .first-topic {
-  margin: 0;
-  margin-top: -1px;
-  padding: (22rem/64) (18rem/64);
-  background: #f5f5f5;
-  border-bottom: none;
+  text-align: left;
+
+  a {
+    text-decoration: none;
+  }
 }
 
-.first-title {
-  font-size: (30rem/64);
+.first-topic-title {
+  line-height: .5rem;
+  font-size: .45rem;
   color: #464646;
-  letter-spacing: 0px;
 }
 
-.first-small {
-  margin-top: (11rem/64);
+.first-topic-small {
+  margin-top: .2rem;
   padding-left: .1rem;
-  line-height: (18rem/64);
   font-size: .3rem;
   color: #9b9b9b;
 }
 
-.first-vote {
+.first-topic-vote {
   position: relative;
-  margin-top: (24rem/64);
+  margin-top: .2rem;
+  width: 9.4rem;
+  overflow: hidden;
 }
 
-.first-agree {
-  font-size: (30rem/64);
+.topic-vote-agreen {
+  float: left;
+  width: 1.5rem;
   color: #d0021b;
-  overflow: hidden;
 }
 
-.agree-num,
-.against-num {
-  height: .75rem;
-}
-
-.agree-text {
-  float: left;
-  width: 1.1875rem;
-  font-size: (14rem/64);
-}
-
-.agree-bar {
-  float: left;
-  height: (9rem/64);
-  width: 7.2rem;
-  background: #d0021b;
-}
-
-.first-against {
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: (30rem/64);
+.topic-vote-against {
+  float: right;
+  width: 1.5rem;
+  text-align: right;
   color: #4a90e2;
-  background: #f5f5f5;
-  overflow: hidden;
 }
 
-.against-num {
-  text-align: right;
+.topic-vote-num {
+  font-size: .45rem;
 }
 
-.against-text {
-  float: right;
-  width: 1.1875rem;
-  font-size: (14rem/64);
-  text-align: right;
-  background: #f5f5f5;
+.topic-vote-text {
+  font-size: .3rem;
 }
 
-.against-bar {
-  float: right;
-  margin-left: .1rem;
-  height: (9rem/64);
-  width: 7.2rem*.5 - .1rem;
-  background: #4a90e2;
+.topic-vote-bar {
+  position: absolute;
+  left: 1.25rem;
+  bottom: .1rem;
+  width: 7rem;
+  height: .25rem;
+  background: linear-gradient(to right, #d0021b 0%, #d0021b 50%, #4a90e2 50%, #4a90e2);
+  background: -webkit-linear-gradient(to right, #d0021b 0%, #d0021b 50%, #4a90e2 50%, #4a90e2);
 }
 
-// 广告
-.ad-content {
-  margin: 0;
-  margin-top: -1px;
-  padding: 0;
-  border-bottom: none;
+// 添加在主屏幕提示
+.add-screen-tip {
+  position: fixed;
+  left: 50%;
+  bottom: .2rem;
+  box-sizing: border-box;
+  margin-left: -2.55rem;
+  padding: .2rem .4rem;
+  width: 5.1rem;
+  height: 2rem;
+  font-family: PingFangSC-Regular;
+  font-size: .3125rem;
+  color: #fff;
+  line-height: .45rem;;
+  background: #000;
+  border-radius: 5px;
+  opacity: .8;
+
+  .tip-close {
+    position: absolute;
+    top: -.25rem;
+    right: -.25rem;
+    padding: .1rem;
+    width: .45rem;
+    height: .45rem;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
 
   img {
-    width: 100%;
+    margin: 0 .1rem;
+    height: .5rem;
   }
 }
 
 // 图集
 .pic-block {
-  margin: (20rem/64) auto 0;
+  font-size: 0;
+  margin: .35rem auto 0;
   width: (600rem/64);
   background: #f5f5f5;
   overflow: hidden;
+  border: 1px solid #e3e3e3;
+
+  img {
+    width: 9.375rem;
+    height: 5.266rem;
+  }
 }
 
 .pic-title {
@@ -519,4 +714,14 @@ section {
   letter-spacing: 0px;
   line-height: (39rem/64);
   text-align: center;
+}
+
+.ad-banner {
+  width: 10rem;
+  height: 2.25rem;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
