--- a/m_huanqiu/src/sass/index.scss
+++ b/m_huanqiu/src/sass/index.scss
@@ -587,11 +587,34 @@ nav {
   .news-title {
     height: auto;
   }
+}
+
+.video-img {
+  position: relative;
+  margin-top: .25rem;
 
   img {
-    margin-top: (16rem/64);
     width: 100%;
+    height: 5.3rem;
   }
+
+  svg {
+    width: 1.2rem;
+    height: 1.2rem;
+    border-radius: 50%;
+    background: #333;
+  }
+}
+
+.video-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5.3rem;
+  line-height: 5.3rem;
+  text-align: center;
+  background: rgba(0, 0, 0, .4)
 }
 
 // 第一话题
