--- a/m_huanqiu/src/sass/index.scss
+++ b/m_huanqiu/src/sass/index.scss
@@ -450,6 +450,7 @@ nav {
   font-family: PingFangSC-Regular;
   height: 1.2rem;
   font-size: .4rem;
+  line-height: .6rem;
   color: #464646;
   overflow: hidden;
 }
