--- a/m_huanqiu/src/sass/index.scss
+++ b/m_huanqiu/src/sass/index.scss
@@ -7,7 +7,12 @@ p {
 }
 
 a {
+  margin: 0;
+  padding: 0;
+  border: 0;
   text-decoration: none;
+  -webkit-touch-callout: none;
+  // -webkit-tap-highlight-color: transparent;
 }
 
 li {
@@ -32,10 +37,6 @@ section {
 
 img {
   border-style: none;
-}
-
-body {
-  background-color: #f2f2f2;
 }
 
 // header
@@ -76,7 +77,10 @@ header {
 // nav
 nav {
   position: relative;
+  top: 0;
+  left: 0;
   box-sizing: border-box;
+  width: 10rem;
   height: 1.25rem;
   font-size: 0;
   border-bottom: 2px solid #910910;
@@ -200,6 +204,21 @@ nav {
 
 .refresh-control-container {
   width: 10rem;
+}
+
+// 推荐提醒
+.auto-info {
+  opacity: 0;
+  position: absolute;
+  font-size: .3rem;
+  width: 10rem;
+  height: .6rem;
+  line-height: .6rem;
+  text-align: center;
+  color: #fff;
+  background: skyblue;
+  z-index: 111;
+  transition: opacity .3s linear .1s;
 }
 
 // 轮播
@@ -604,6 +623,7 @@ nav {
     height: 1.2rem;
     border-radius: 50%;
     background: #333;
+    vertical-align: middle;
   }
 }
 
@@ -724,6 +744,11 @@ nav {
   background: #f5f5f5;
   overflow: hidden;
   border: 1px solid #e3e3e3;
+
+  .video-img {
+    margin-top: 0;
+    height: 5.3rem;
+  }
 
   img {
     width: 9.375rem;
