--- a/m_huanqiu/src/sass/index.scss
+++ b/m_huanqiu/src/sass/index.scss
@@ -102,7 +102,6 @@ header {
 nav {
   position: relative;
   top: 0;
-  left: 0;
   box-sizing: border-box;
   width: 10rem;
   height: 1.25rem;
@@ -758,6 +757,7 @@ footer {
 
 // 添加在主屏幕提示
 .add-screen-tip {
+  display: none;
   position: fixed;
   left: 50%;
   bottom: .2rem;
@@ -830,5 +830,25 @@ footer {
   img {
     width: 100%;
     height: 100%;
+  }
+}
+
+.mock-line {
+  margin: 0 .3rem .3rem;
+  margin-top: -1px;
+  height: 1px;
+  background: #f0f0f0;
+}
+
+// 修复广告影响
+section {
+  .news-style-0,
+  .news-style-1,
+  .news-style-2 {
+    padding-top: 0;
+    border-top: 0;
+  }
+  .ad-banner {
+    margin-bottom: .3rem;
   }
 }
