--- a/m_huanqiu/src/sass/index.scss
+++ b/m_huanqiu/src/sass/index.scss
@@ -273,13 +273,16 @@ footer {
   
   ul {
     height: 100%;
+    font-size: 0;
   }
 
   li {
     position: relative;
-    float: left;
+    display: inline-block;
+    // float: left;
     width: 10rem;
     height: 100%;
+    overflow: hidden;
   }
 
   img {
@@ -327,8 +330,15 @@ footer {
 }
 
 .lunbo-page {
-  float: left;
+  // float: left;
+  display: inline-block;
   width: 10rem;
+  vertical-align: top;
+  white-space: normal;
+}
+
+.lunbo-wrapper {
+  white-space: nowrap;
 }
 
 // live
